--- a/css/general.css
+++ b/css/general.css
@@ -87,6 +87,17 @@ article {
     width: auto;
 }
 
+.productbillboard {
+    overflow:hidden;
+    background-image:url(../images/bordeleau-11.jpg);
+    background-color:black;
+    background-position: center;
+    background-repeat:no-repeat;
+    background-size:auto;
+    height: 20rem;
+    width: auto;
+}
+
 h1 {
     font-family:'Amaranth';
     color: white;
@@ -103,7 +114,7 @@ h2 {
     color: #E4632C;
     font-size: 2rem;
     padding: 0;
-    margin: 0;   
+    margin: 0 0 5%;   
 }
 
 p {
